[gd_scene load_steps=11 format=2]

[ext_resource path="res://ui/cafe_bg.png" type="Texture" id=1]
[ext_resource path="res://match3/match3.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/messagebox/message_box.gd" type="Script" id=3]
[ext_resource path="res://ui/sprites/blue_panel.png" type="Texture" id=4]
[ext_resource path="res://ui/font/kenvector_future_thin.tres" type="DynamicFont" id=5]
[ext_resource path="res://ui/font/kenvector_future.tres" type="DynamicFont" id=6]
[ext_resource path="res://game.gd" type="Script" id=7]
[ext_resource path="res://ui/fade.gd" type="Script" id=8]
[ext_resource path="res://characters/ginpng.tscn" type="PackedScene" id=9]
[ext_resource path="res://dialogue_box.gd" type="Script" id=10]

[node name="Node2D" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0.5, 0.5 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Background"]
anchor_right = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 80.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="CheckButton" parent="Background/HBoxContainer"]
margin_left = 1164.0
margin_right = 1240.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 76, 0 )

[node name="GinPng" parent="Background" instance=ExtResource( 9 )]

[node name="DialogueBox" type="NinePatchRect" parent="Background"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -380.0
margin_top = 100.0
margin_right = -30.0
margin_bottom = 200.0
texture = ExtResource( 4 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UIFade" type="Node" parent="Background/DialogueBox"]
script = ExtResource( 8 )

[node name="Tween" type="Tween" parent="Background/DialogueBox/UIFade"]

[node name="MessageBox" type="RichTextLabel" parent="Background/DialogueBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
custom_fonts/bold_font = ExtResource( 6 )
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "This is my game playing the lol games. [b]test![/b]"
text = "This is my game playing the lol games. test!"
scroll_active = false
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
speed = 30.0
acceleration = 1.0
message = "This is my game playing the lol games. [b]test![/b]"
autoscroll = false

[node name="Match3Game" parent="." instance=ExtResource( 2 )]
visible = false
margin_left = 1.33484
margin_top = -0.749146
margin_right = 1.33484
margin_bottom = -0.749146

[connection signal="message_done" from="Background/DialogueBox/MessageBox" to="." method="_on_MessageBox_message_done"]
